# MCP_Comparing-Websites

./: .env  README.md  auth.db  create_admin.py  flask_app.py  flipkart_source.html  main.py  mcp_client.py  models.py  nykaa_source.html  pyproject.toml  requirements.txt  routes.py  server.py  streamlit_app.py  users.db  utils.py
.github/: env.example  gitignore
.github/tests/: test_placeholder.py
.github/workflows/: ci-cd.yml
auth/: database.py  models.py  routes.py  users.py  utils.py
tools/: debug_selectors.py  scraper.py
utils/: ai_suggestor.py  logger.py  wishlist_manager.py
wishlists/: XYZ.json
