[project]
name = "mcp-comparing-websites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
